Fixup scrollbars, colors, add search icon, missing border in sidebar, shuffle around paddings

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .fancy-scrollbar::-webkit-scrollbar {
+    background-color: #eeeef0;
+    width: 4px;
+    border-radius: 999px;
+  }
+  .fancy-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #cfcaf2;
+    border-radius: 999px;
+  }
+}
+
+body{
+  background: #28292F
+}
+
+.CodeMirror-vscrollbar{
+  display: none !important;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
   display: none;
@@ -78,6 +98,10 @@ ol {
   overflow-y: scroll;
   max-width: 100%;
   overflow-x: 500px;
+}
+
+.CodeMirror-scroll{
+  padding: 12px;
 }
 
 /* Markdown styles */
